chore: update api type
