# src/api/apiDefinitions.ts
@@ -49,5 +49,11 @@ export default {
   'general.post_users_delete': ['POST', '/users/delete'],
   'general.post_users_password': ['POST', '/users/password'],
   'general.get_users_roles': ['GET', '/users/roles'],
-  'general.post_users_roles': ['POST', '/users/roles']
+  'general.post_users_roles': ['POST', '/users/roles'],
+  'api.get_apis': ['GET', '/apis'],
+  'api.post_apis': ['POST', '/apis'],
+  'api.post_apis_delete': ['POST', '/apis/delete'],
+  'api.get_apis_role': ['GET', '/apis/role'],
+  'api.post_apis_role': ['POST', '/apis/role'],
+  'api.post_apis_update': ['POST', '/apis/update']
 };
