# swagger/doc.json
@@ -20,6 +20,9 @@
     },
     {
       "name": "用户管理"
+    },
+    {
+      "name": "API管理"
     }
   ],
   "paths": {
@@ -1865,6 +1868,328 @@
           }
         ]
       }
+    },
+    "/apis": {
+      "get": {
+        "summary": "获取所有API接口",
+        "deprecated": false,
+        "description": "获取所有API接口列表",
+        "tags": [
+          "API管理"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-array_system_Api"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "400": {
+            "description": "错误",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-string"
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      },
+      "post": {
+        "summary": "创建API接口",
+        "deprecated": false,
+        "description": "创建新的API接口",
+        "tags": [
+          "API管理"
+        ],
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/system.Api"
+              },
+              "examples": {
+                "1": {
+                  "value": "",
+                  "description": ""
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-system_Api"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "400": {
+            "description": "错误",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-string"
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/apis/delete": {
+      "post": {
+        "summary": "删除API接口",
+        "deprecated": false,
+        "description": "删除指定API接口",
+        "tags": [
+          "API管理"
+        ],
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "integer"
+                  }
+                }
+              },
+              "examples": {
+                "1": {
+                  "value": "",
+                  "description": ""
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-string"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "400": {
+            "description": "错误",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-string"
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/apis/role": {
+      "get": {
+        "summary": "获取角色API接口",
+        "deprecated": false,
+        "description": "根据角色ID获取API接口列表",
+        "tags": [
+          "API管理"
+        ],
+        "parameters": [
+          {
+            "name": "roleId",
+            "in": "query",
+            "description": "角色ID",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-array_system_Api"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "400": {
+            "description": "错误",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-string"
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      },
+      "post": {
+        "summary": "更新角色API关联",
+        "deprecated": false,
+        "description": "更新角色与API的关联关系",
+        "tags": [
+          "API管理"
+        ],
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "ids": {
+                    "type": "array",
+                    "items": {
+                      "type": "integer"
+                    }
+                  },
+                  "roleId": {
+                    "type": "integer"
+                  }
+                }
+              },
+              "examples": {
+                "1": {
+                  "value": "",
+                  "description": ""
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-string"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "400": {
+            "description": "错误",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-string"
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
+    "/apis/update": {
+      "post": {
+        "summary": "更新API接口",
+        "deprecated": false,
+        "description": "更新API接口信息",
+        "tags": [
+          "API管理"
+        ],
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/system.Api"
+              },
+              "examples": {
+                "1": {
+                  "value": "",
+                  "description": ""
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-system_Api"
+                }
+              }
+            },
+            "headers": {}
+          },
+          "400": {
+            "description": "错误",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/utils.Response-string"
+                }
+              }
+            },
+            "headers": {}
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
     }
   },
   "components": {
@@ -2010,6 +2335,12 @@
       "system.Role": {
         "type": "object",
         "properties": {
+          "Apis": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/system.Api"
+            }
+          },
           "buttons": {
             "type": "array",
             "items": {
@@ -2400,6 +2731,79 @@
           },
           "data": {
             "$ref": "#/components/schemas/utils.Pagination-system_User"
+          },
+          "msg": {
+            "type": "string"
+          }
+        }
+      },
+      "system.Api": {
+        "type": "object",
+        "properties": {
+          "createTime": {
+            "type": "string"
+          },
+          "group": {
+            "type": "string"
+          },
+          "id": {
+            "type": "integer"
+          },
+          "method": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "path": {
+            "type": "string"
+          },
+          "roles": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/system.Role"
+            }
+          },
+          "updateTime": {
+            "type": "string"
+          }
+        }
+      },
+      "utils.Response-array_system_Api": {
+        "type": "object",
+        "required": [
+          "code",
+          "data",
+          "msg"
+        ],
+        "properties": {
+          "code": {
+            "type": "string"
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/system.Api"
+            }
+          },
+          "msg": {
+            "type": "string"
+          }
+        }
+      },
+      "utils.Response-system_Api": {
+        "type": "object",
+        "required": [
+          "code",
+          "data",
+          "msg"
+        ],
+        "properties": {
+          "code": {
+            "type": "string"
+          },
+          "data": {
+            "$ref": "#/components/schemas/system.Api"
           },
           "msg": {
             "type": "string"
